--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .buildlog/
 .history
 .svn/
+.vscode/
 .swiftpm/
 migrate_working_dir/
 
@@ -32,6 +33,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/android/
 
 # Symbolication related
 app.*.symbols
