--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   file_picker: ^8.1.7
   open_file: ^3.5.10
   font_awesome_flutter: ^10.8.0
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
   
 dev_dependencies:
   flutter_test:
