--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_form_builder: ^9.6.0
   google_fonts: ^6.2.1
-  build_runner: ^2.4.14
-  json_serializable: ^6.9.2
+  json_serializable: ^6.9.0
   mobile_scanner: ^6.0.2
   image_picker: ^1.1.2
   grouped_list: ^6.0.0
@@ -60,6 +59,8 @@ dependencies:
   hive: ^2.2.3
   
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.14
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
